# shellb

./: README.md  install.sh  shellb.sh  test.sh
.github/workflows/: ci-release.yml  ci-test.yml
builds/: _.sh
checks/: _.sh
commands/: _.sh
examples/ffead-cpp/: ffead-cpp-buck2-shellb.sh  ffead-cpp-buck2.sh  ffead-cpp-shellb.sh  ffead-cpp.sh  install_ffead-cpp-dependencies.sh  inter-shellb.sh
platform/c_cpp/: build.sh  checks.sh
snippets/: .test.c  BUILD.usrlocal  attr.bzl  c-compile.bzl  cpp-compile.bzl  defines.bzl  sh_exec.bzl  tab_cc_library_internal.bzl
snippets/c_cpp/: .testfunc.c
snippets/c_cpp/bazel/: BUILD.bazel.tem  BUILD.macssl  WORKSPACE.bazel  attribute_manipulations.bzl  debug.bzl  tab_cc_helpers_internal.bzl
tools/bazel/: bazel-util.sh
tools/buck2/: buck2-util.sh
utils/: commands.sh  kv-bash  stack
