workspace(name = "private_headers_tryout") 

# buildifier: disable=module-docstring
#load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
#load("@bazel_tools//tools/build_defs/repo:utils.bzl", "maybe")
 
http_archive(
    name = "bazel_skylib",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-skylib/releases/download/1.2.1/bazel-skylib-1.2.1.tar.gz",
        "https://github.com/bazelbuild/bazel-skylib/releases/download/1.2.1/bazel-skylib-1.2.1.tar.gz",
    ],
    sha256 = "f7be3474d42aae265405a592bb7da8e171919d74c16f082a5457840f06054728",
)

new_local_repository(
	name = "usrlocal",
	path = "/usr/local",
	build_file = "BUILD.usrlocal",
)

new_local_repository(
	name = "macssl",
	path = "/usr/local/opt/openssl",
	build_file = "BUILD.macssl",
)